--- a/frontend/src/index.module.scss
+++ b/frontend/src/index.module.scss
@@ -1,38 +1,74 @@
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
 
-h1{
+h1 {
   color: #2c7c43;
   margin-bottom: 1em;
   font-size: 2.1em;
 }
 
 
-.bold{
+.bold {
   font-weight: bold;
   color: #2c7c43;
 }
 
-.imagemHome{
+
+.imagemHome {
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: center;
+  // align-items: center;
+  // margin-top: 3em;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  margin-top: 3em;
+  margin-bottom: 1em;
 }
 
-.imagemHome img{
-  width: 600px;
-  margin-right: 0.9em;
-  margin-bottom: 0.5em;
- 
+.imagemHome img {
+  // width: 600px;
+  // margin-right: 0.9em;
+  // margin-bottom: 0.5em;
+  max-height: 300px;
+  margin-right: 1em;
+  margin-bottom: 2em;
 }
 
-.titulo{
+@media screen and (min-width:1280px) {
+
+  .imagemHome {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1em;
+  }
+
+  .imagemHome img {
+    max-height: 300px;
+    margin-right: 1em;
+    margin-bottom: 2em;
+  }
+}
+
+@media screen and (max-width:780px) {
+
+  .imagemHome {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1em;
+  }
+
+  .imagemHome img {
+    max-height: 200px;
+    margin-right: 1em;
+    margin-bottom: 2em;
+  }
+}
+
+.titulo {
   margin-top: 1.5em;
   text-align: center;
 }
@@ -46,4 +82,3 @@ h1{
   margin-left: 1.5em;
 
 }
-
